# advent-of-code

./: .editorconfig  .gitignore  Cargo.toml  Cranky.toml  Makefile  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/actions/ci-bootstrap/: action.yml
.github/workflows/: ci.yml
aoc-macros/: Cargo.toml
aoc-macros/src/: lib.rs
src/: input.rs  sort.rs
