# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "aoc"
description = "Advent of Code Solutions"
version = "0.1.0"
authors = ["Cathal Mullan <contact@cathal.dev>"]
edition = "2021"
keywords = ["advent-of-code"]
categories = ["rust-patterns"]
repository = "https://github.com/CathalMullan/advent-of-code"
license = "MIT"
publish = false

# Helps with some of the "brute-force" style questions
[profile.test]
opt-level = 3

[dependencies]
# "numpy"
ndarray = "0.15"
# "pandas" - not needed (yet)
# polars = { version = "0.22", features = [
#   "default",
#   "ndarray",
#   "lazy",
#   "fmt",
#   "dtype-full",
# ] }
# 2015 - 04
md5 = "0.7"
